use ship as moving model

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <canvas id="bg"></canvas>
 
-    <div id="app"></div>
+    <div>
+      <h1>Enter</h1>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
