--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Max's Website</title>
+    <title>Contact</title>
   </head>
   <body>
 
     <canvas id="bg"></canvas>
 
     <div>
-      <h1>menu</h1>
+      <h1>Contact Me</h1>
     </div>
-    <script type="module" src="/src/main.js"></script>
+    <!--<script type="module" src="/src/main.js"></script>-->
   </body>
 </html>
