--- a/projects.html
+++ b/projects.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Max's Website</title>
+    <title>Projects</title>
   </head>
   <body>
+
     <canvas id="bg"></canvas>
-    <script type="module" src="/src/main.js"></script>
+
+    <div>
+      <h1>My Projects</h1>
+    </div>
+    <!--<script type="module" src="/src/main.js"></script>-->
   </body>
 </html>
