add portal animation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <canvas id="bg"></canvas>
+    <div class="fade-out-screen"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
