add scroll effect with IntersectionObserver

--- a/about.html
+++ b/about.html
@@ -17,13 +17,13 @@
     </div>
     <div class="content-container">
       <canvas id="title-canvas"></canvas>
-      <p>
+      <p class="hidden">
         Hello! I'm a high school student with a passion for creating dynamic and engaging programs ranging from multiple different sectors. I enjoy working with modern technologies and continuously learning new skills to improve my craft. In my free time, I love exploring new programming languages, creating new projects, and sharing knowledge with those around me.
       </p>
-      <p>
+      <p class="hidden">
         Outside of programming, I enjoy working out, reading, playing video games, and spending time with friends and family.
       </p>
-      <p>
+      <p class="hidden">
         Feel free to reach out to me through my contact page or connect with me on social media. I'm always open to new opportunities and collaborations!
       </p>
     </div>
