--- a/client/projects.html
+++ b/client/projects.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!--<link rel="icon" type="image/svg+xml" href="/vite.svg" />-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Projects</title>
   </head>
   <body>
 
     <canvas id="bg"></canvas>
 
     <div>
-      <h1>Contact Me</h1>
+      <h1>My Projects</h1>
     </div>
     <!--<script type="module" src="/src/main.js"></script>-->
   </body>
